--- a/viewpw.html
+++ b/viewpw.html
@@ -15,6 +15,8 @@
   integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
   crossorigin="anonymous"
 ></script>
+
+ <! -- HTML bloc-->
 <div class="form-group">
   <input id="password" type="password" placeholder="Enter your password" />
   <span class="eyeicon" onclick="viewpass()">
@@ -22,6 +24,7 @@
   </span>
 </div>
 
+<! -- JS bloc-->
 <script>
   var visible = true;
   var changetype = true;
@@ -42,6 +45,8 @@
     }
   }
 </script>
+
+<! -- CSS bloc-->
 <style>
   .form-group {
     position: relative;
